# Fruitbox

./: .gitignore  AGENTS.md  README.md  fruitbox_ai_watch.py  fruitbox_config.py  fruitbox_menu.py  fruitbox_pygame.py  fruitbox_settings.py  fruitbox_stats.py  fruitbox_stats_screen.py  fruitbox_vs.py  index.html  manifest.webmanifest  pyproject.toml  registerSW.js  requirements.txt  settings.json  sw.js  theme.json  workspace.josh
.github/scripts/: download_hf_onnx.py
.github/workflows/: build-windows.yml  deploy-pages-sync.yml  deploy-web.yml
assets/: index-n1d3c7e6.js
fruitbox/: __init__.py  cli.py  engine.py  levels.py  models.py  serve.py
fruitbox/data/levels/: corner.json  mixed.json  pairs.json  tutorial.json  two-box.json
fruitbox/solvers/: __init__.py  astar.py  base.py  bfs.py  dfs.py  greedy.py
fruitbox/static/: app.js  index.html  manifest.json  style.css  sw.js
pr-preview/pr-6/: index.html  manifest.webmanifest  registerSW.js  sw.js
pr-preview/pr-6/assets/: index-Bp2Xf2tI.js  index-CCIdDmqW.css
pr-preview/pr-7/: index.html  manifest.webmanifest  registerSW.js  sw.js
pr-preview/pr-7/assets/: index-BH8taq3H.js  index-Bd71WOr4.js  index-BdELANqA.js  index-Bot6Mdl4.js  index-CRQ3QJOe.js  index-D7zdsch-.css
pr-preview/pr-7/wheels/: fruitbox_core-0.1.0-py3-none-any.whl
src/: __main__.py  index.html  main.py  pygbag.ini
src/fruitbox/: ai_watch.py  onnx_agent.py  vs.py
src/fruitbox.egg-info/: SOURCES.txt
src/fruitbox_web/: _common.py  vs.py  watch.py
tests/: test_engine.py  test_solvers.py
tools/: build_pwa.py  build_web.py  export_onnx.py  test_web_console.py  test_web_network.py  verify_web_build.py
web/: app.js  index.html  style.css
