[project]
name = "fruitbox"
version = "0.1.0"
description = "Grid-based fruitbox puzzle engine with pluggable solvers and PWA web app"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "typer",
]

[project.scripts]
fruitbox = "fruitbox.cli:app"

[dependency-groups]
dev = [
    "pytest>=7.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["fruitbox"]

[tool.hatch.build.targets.wheel]
packages = ["fruitbox"]

[tool.hatch.build.force-include]
"fruitbox/data" = "fruitbox/data"
"fruitbox/static" = "fruitbox/static"
