[project]
name = "fruitbox"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
cpu = ["torch"]
cu128 = ["torch"]

[tool.uv.workspace]
members = [
    "packages/fruitbox-core",
    "packages/fruitbox-pygame",
    "packages/fruitbox-app-torch",
    "packages/fruitbox-app-onnx",
    "packages/fruitbox-train",
    "packages/fruitbox-web",
    "packages/fruitbox-ci",
]

[tool.uv.sources]
fruitbox-app-onnx  = { workspace = true }
fruitbox-app-torch = { workspace = true }
fruitbox-core      = { workspace = true }
fruitbox-pygame    = { workspace = true }
fruitbox-train     = { workspace = true }
fruitbox-web       = { workspace = true }
fruitbox-ci        = { workspace = true }
torch = { index = "pytorch-cpu" }

[tool.uv]
conflicts = [
    [{ extra = "cpu" }, { extra = "cu128" }],
]

[dependency-groups]
plot = ["matplotlib", "pandas", "tensorboard"]

[[tool.uv.index]]
name = "pytorch-cpu"
url  = "https://download.pytorch.org/whl/cpu"
explicit = true
